<resources>
    <string name="app_name">Designated Ride</string>
    <string name="title_activity_rider_view_profile">User Profile</string>
    <string name="title_activity_rider_map">Request Ride</string>
    <string name="title_activity_driver_map">DRIVERMAP</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="change_password">Change Password</string>
    <string name="start_page_welcome">@string/app_name</string>
    <string name="register_page_already_account">already have an account? login here</string>
    <string name="register_page_first_name_hint">First Name</string>
    <string name="register_page_last_name_hint">Last Name</string>
    <string name="register_page_username_hint">Username</string>
    <string name="register_page_email_hint">Email</string>
    <string name="register_page_email_confirm_hint">Confirm Email</string>
    <string name="register_page_password_hint">Password</string>
    <string name="register_page_verify_password_hint">Verify Password</string>
    <string name="register_page_register_button_text">Register</string>
    <string name="app_name_first_word">Designated</string>
    <string name="app_name_second_word">Ride</string>
    <string name="login_page_email_hint">awesome@email.com</string>
    <string name="login_page_password_hint">password</string>
    <string name="login_page_login_button_text">LOG IN</string>
    <string name="login_page_forgot_password_text">forgot password? reset here</string>
    <string name="login_page_not_a_member_text">not a member? sign up here</string>
    <string name="designated_ride_logo_descriptor">Designated Ride Logo</string>
    <string name="rider_profile_header_general_info">General Information</string>
    <string name="rider_profile_header_medical_info">Medical Information</string>
    <string name="rider_profile_header_public_info">Public Profile</string>
    <string name="rider_profile_gen_info_fname">First Name</string>
    <string name="rider_profile_gen_info_lname">Last Name</string>
    <string name="rider_profile_gen_info_age">Age</string>
    <string name="rider_profile_gen_info_email">Email Address</string>
    <string name="rider_profile_gen_info_phonenumber">Phone Number</string>
    <string name="rider_profile_med_info_insurance_company">Insurance Company</string>
    <string name="rider_profile_med_info_ride_coverage">Rider Coverage</string>
    <string name="rider_profile_med_info_gen_doctor_name">Doctor\'s Name</string>
    <string name="driver_profile_header_vehicle_info">Vehicle Information</string>
    <string name="driver_profile_car_make">Car Make</string>
    <string name="driver_profile_car_model">Car Model</string>
    <string name="driver_profile_car_year">Car Year</string>
    <string name="driver_profile_wheelchair_access">Wheelchair Access</string>
    <string name="rider_profile_public_info_public_name">Name</string>
    <string name="rider_profile_public_info_wheelchair_required">Wheelchair Required</string>
    <string name="driver_profile_rating">Rating</string>
    <string name="view_appt_rider_request_ride_btn_text">Request Ride</string>
    <string name="view_appt_rider_dest_logo_desc">marker dest logo</string>
    <string name="view_appt_rider_hospital_name_default">HOSPITAL_NAME</string>
    <string name="view_appt_rider_hospital_address_default">HOSPITAL_ADDRESS CITY STATE ZIP</string>
    <string name="view_appt_rider_time_icon_desc">Time icon</string>
    <string name="view_appt_rider_time_header_default">TIME TIMEZONE</string>
    <string name="view_appt_rider_time_daymonthday_default_text">DAYNAME, MONTH DAY</string>
    <string name="view_appt_rider_advancebookingicon_desc">advanced booking icon</string>
    <string name="view_appt_rider_advanced_book_status_default_text">ADVANCED_BOOK_STATUS</string>
    <string name="view_appt_rider_advancedbookingsubtext_default_text">ADVANCED_BOOKING_AVAILABLE</string>
    <string name="view_appt_rider_additionalnote_default_text">ADDITIONAL_NOTES_TEXT</string>
    <string name="view_appt_rider_hospital_name">Enter Hospital\'s Name</string>
    <string name="view_appt_rider_hospital_address">Enter Hospital\'s Address</string>
    <string name="view_appt_rider_time">Appointment\'s Time</string>
    <string name="view_appt_rider_note">Additional Notes</string>
    <string name="view_appt_rider_editpen_desc">edit pen icon</string>
    <string name="view_appt_rider_editpen_desc1">edit pen icon</string>
    <string name="view_appt_rider_appointment_text_view">%1$s\\n%2$s</string>
    <string name="appt_list_rider_default_date">Feb\n30</string>
    <string name="appt_list_rider_date">%1$s\n%2$s</string>
    <string name="appt_list_rider_default_name_line">APPOINTMENT_LINE_1</string>
    <string name="appt_list_rider_default_time_hospname_line">TIME, HOSPITAL_NAME</string>
    <string name="appt_list_rider_default_notes_line">NOTES - NOTES - NOTES - NOTES - NOTES -
                                            NOTES - NOTES - NOTES - NOTES - NOTES - </string>
    <string name="rider_map_pickup_label">Pick Up:</string>
    <string name="rider_map_destination_label">Destination:</string>
    <string name="rider_map_time_label">Time:</string>
    <string name="rider_map_request_button">Request Ride</string>
    <string name="rider_map_time_hint">Time</string>
    <string name="rider_map_destination_hint">Destination</string>
    <string name="rider_map_pickup_hint">Pickup</string>
    <string name="preference_distance">Preference Distance</string>
    <string name="advanced_booking_from">Advanced Booking From Time</string>
    <string name="advanced_booking_to">Advanced Booking To Time</string>
    <string name="update_preferences">Update Preferences</string>
    <string name="loginLinkTV">Login Page</string>
    <string name="registerLinkTV">Register Page</string>
    <string name="view_profile">View Profile</string>
    <string name="request_ride">Request Ride</string>
    <string name="appointment">Appointment</string>
    <string name="settings">Settings</string>
    <string name="pickup_rider">Pickup Rider</string>
    <string name="update_profile">Update Profile</string>
    <string name="logout">Logout</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="verify">Are you sure?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="driver_profile">Driver Profile</string>
    <string name="rider_profile">Rider Profile</string>
    <string name="update_pwd">Update Password</string>
    <string name="close">Close</string>
    <string name="reset_pwd">Reset Password</string>
    <string name="submit">Submit</string>
    <string name="view_driver_profile">View Profile</string>
    <string name="ride_schedule">Ride Schedule</string>
    <string name="view_map">View Map</string>
    <string name="available">Available</string>
    <string name="view_availability">Availability</string>
    <string name="incoming_request">Incoming Request</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="addCalDes">ADD CAL</string>
    <string name="viewCalDes">VIEW CAL</string>
    <string name="home_address_text">12 Grimmauld Place, London, England</string>
    <string name="editApptLocationHeader">LOCATION</string>
    <string name="editAppt_appointment_title">Appointment Title</string>
    <string name="editAppt_destination_name">Destination Name</string>
    <string name="editAppt_destination_address">Destination Address</string>
    <string name="editAppt_city_state_zip">City, State Zip</string>
    <string name="editAppt_date_and_time">DATE &amp; TIME</string>
    <string name="editAppt_month">MONTH</string>
    <string name="editAppt_day">DAY</string>
    <string name="editAppt_year">YEAR</string>
    <string name="editAppt_defaultTime">00:00 AM</string>
    <string name="editAppt_other_notes">OTHER NOTES</string>
    <string name="editAppt_notes_default_text">Tap to add notes</string>
    <string name="editAppt_save_btn_text">Save</string>
    <string name="editAppt_cancel_btn_text">Cancel</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register">Register</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="age">Age</string>
    <string name="age_placeholder">30</string>
    <string name="lname_placeholder">Wick</string>
    <string name="fname_placeholder">John</string>
    <string name="email_addr_ph">Email Address</string>
    <string name="email_placeholder">johnwick@continental.com</string>
    <string name="phone_ph">Phone Number</string>
    <string name="phone_placeholder">555-555-5555</string>
    <string name="ins_ph">Insurance</string>
    <string name="ins_placeholder">State Farm</string>
    <string name="coverage_ph">Ride Coverage</string>
    <string name="coverage_placeholder">Full Cost</string>
    <string name="doctor_ph">Doctor\'s Name</string>
    <string name="docsname_placeholder">Dr. Dre</string>
    <string name="name_ph">User Name</string>
    <string name="wheelchair_ph">Wheelchair Access</string>
    <string name="wheelchair_placeholder">No</string>
    <string name="username_placeholder">johnwick</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="dob">Date of Birth</string>
    <string name="address_line">Street</string>
    <string name="address_street">Street</string>
    <string name="address_ctAndState">City, State, Zip</string>
    <string name="driver_edit_profile">Driver Edit Profile</string>
    <string name="appts">Appointments</string>
    <string name="on_switch">On</string>
    <string name="off_switch">Off</string>
    <string-array name="month">
        <item>January</item>
        <item>February</item>
        <item>March</item>
        <item>April</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>August</item>
        <item>September</item>
        <item>October</item>
        <item>November</item>
        <item>December</item>
    </string-array>
    <string-array name="day">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
    </string-array>
</resources>