<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_height="wrap_content"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@drawable/dialog_boder"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <EditText
        android:id="@+id/passworddET_pwdDialog"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_borders"
        android:hint="@string/register_page_password_hint"
        android:inputType="textPassword"
        android:padding="15dp"
        android:cursorVisible="true"
        android:textCursorDrawable="@drawable/cursor_color" />

    <EditText
        android:id="@+id/verifyPwdET_pwdDialog"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_borders"
        android:hint="@string/register_page_verify_password_hint"
        android:inputType="textPassword"
        android:padding="15dp"
        android:cursorVisible="true"
        android:textCursorDrawable="@drawable/cursor_color" />


    <Button
        android:id="@+id/updatePwdBtn_pwdDialog"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edittext_borders"
        android:text="@string/update_pwd"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/closeTV_pwdDialog"
        android:text="@string/close"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="24dp"
        android:padding="10dp"
        android:textStyle="italic"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

</LinearLayout>