<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@id/userLoginBtn_log"
    android:background="@mipmap/shapes1"
    android:fillViewport="true"
    android:isScrollContainer="true"
    android:orientation="vertical"
    tools:context="com.example.awesomeness.designatedride.Activities.StartPageActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/logoNameContainerBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="50dp"
                android:layout_marginTop="50dp"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:contentDescription="@string/designated_ride_logo_descriptor"
                    android:src="@drawable/logo" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name_first_word"
                        android:textColor="@color/titleFontColor"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/app_name_second_word"
                        android:textColor="@color/titleFontColor"
                        android:textSize="20sp" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/logoNameContainerBox"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/userEmailET_log"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_centerInParent="true"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/edittextstyle"
                    android:hint="@string/login_page_email_hint"
                    android:inputType="textEmailAddress"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />

                <EditText
                    android:id="@+id/userPassET_log"
                    android:layout_width="250dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/edittextstyle"
                    android:hint="@string/login_page_password_hint"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp" />


                <Button
                    android:id="@+id/userLoginBtn_log"
                    android:layout_width="250dp"
                    android:layout_height="60dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:text="@string/login_page_login_button_text" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:layout_alignParentBottom="true"
                android:layout_centerInParent="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="15dp"
                android:paddingTop="25dp">

                <TextView
                    android:id="@+id/forgotPasswordTV_log"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/login_page_forgot_password_text"
                    android:textColor="@color/helpTextColor"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/registerLinkTV_log"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/forgotPasswordTV_log"
                    android:layout_centerHorizontal="true"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/login_page_not_a_member_text"
                    android:textColor="@color/helpTextColor"
                    android:textSize="17sp" />
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>
