<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:orientation="vertical"
            android:padding="25dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <Button
                android:id="@+id/btn_updateProfile_drvrPopup"
                android:text="@string/update_profile"
                android:layout_marginTop="15dp"
                android:padding="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <Button
                android:id="@+id/btn_logout_drvrPopup"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:padding="10dp"
                android:text="@string/logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/tv_cancelLink_drvrPopup"
                android:text="@string/cancel"
                android:textSize="24dp"
                android:textColor="@color/colorPrimaryDark"
                android:textStyle="bold|italic"
                android:layout_width="match_parent"
                android:textAlignment="center"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>